Fixed ACL spacing.

--- a/_sass/my-style.scss
+++ b/_sass/my-style.scss
@@ -94,7 +94,7 @@ a[href*="aclanthology.org/"]:not(.no-mark-external):not(.no-mark)::after {
 }
 
 a[href*="aclanthology.org/"]:not(.no-mark-external):not(.no-mark)::after {
-  content: ".......";  // Terrific spacing bruh
+  content: "......." !important;  // Terrific spacing bruh
   color: rgba(0, 0, 0, 0) !important;
   background: url(https://aclanthology.org/images/acl-logo.svg) no-repeat right center;
   background-size: contain;
